# markstrip

./: .gitignore  README.md  pyproject.toml
.superpowers/sdd/: progress.md  task-1-brief.md  task-1-report.md  task-10-brief.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-report.md  task-6-brief.md  task-6-report.md  task-7-brief.md  task-8-brief.md  task-9-brief.md
docs/: markstrip-design.md
docs/superpowers/plans/: 2026-07-15-markstrip-implementation.md  2026-07-17-block-comment-markers.md  2026-07-17-pragma-directive.md  2026-07-19-check-mode-and-stdin-pipe.md  2026-07-19-fix-block-docs-and-remove-full-range.md
docs/superpowers/specs/: 2026-07-17-block-comment-markers-design.md  2026-07-17-pragma-directive-design.md  2026-07-19-check-mode-and-stdin-pipe-design.md  2026-07-19-fix-block-docs-and-remove-full-range.md
markstrip/: __init__.py  cli.py
markstrip/core/: block_scanner.py  config.py  engine.py  errors.py  pragma_scanner.py  result.py
markstrip/languages/: __init__.py  _builtin.py  base.py  markdown_plugin.py  python_plugin.py  registry.py
tests/: conftest.py
tests/golden/markdown/: block_in_yaml.expected.md  block_in_yaml.md  code_block_delegation.expected.md  code_block_delegation.md  html_comment.expected.md  html_comment.md  nested_codeblock.expected.md  (+5 more)
tests/integration/: test_cli.py
tests/unit/: test_block_scanner.py  test_config.py  test_engine.py  test_markdown_plugin.py  test_pragma_scanner.py  test_python_plugin.py  test_registry.py  test_result.py
(+28 files in other folders)
