[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_backend"
[project]
name = "markstrip"
version = "0.1.0"
description = "标记式选择性注释过滤库"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "markstrip contributors"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.scripts]
markstrip = "markstrip.cli:main"

[project.entry-points."markstrip.plugins"]

[tool.setuptools.packages.find]
include = ["markstrip*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
